feat : Signup View
- 회원가입 화면(2단계)
- 백엔드 서버 추가 후 테스트 필요

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,gradle,windows
+*.xml
+*.iml
+.DS_Store
